[package]
name = "imgui-vulkano-renderer"
version = "0.9.0"
authors = ["Sam Blazes", "Leon Matthes"]
edition = "2021"

repository = "https://github.com/LeonMatthes/imgui-vulkano-renderer"
readme = "README.md"
license-file = "LICENSE"
description = "A renderer for imgui-rs using Vulkano"
categories = ["gui", "rendering"]
keywords = ["vulkano", "imgui", "graphics", "gui", "rendering"]

[dependencies]
bytemuck = { version = "1.7", features = ["derive", "extern_crate_std", "min_const_generics"] }
vulkano = "0.35.1"
vulkano-shaders = "0.35.0"
imgui = "0.12.0"

[dev-dependencies]
clipboard = "0.5.0"
imgui-winit-support = "0.13.0"
vulkano-win = "0.32"

winit = "0.30.9"
image = "0.25.5"
